<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ThemRed">

    <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80dp"
            android:id="@+id/relativeLayout">

        <TextView
                style="@style/AuthHeader"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pshop"/>
    </RelativeLayout>
    <TextView
            android:textColor="@android:color/white"
            android:text="@string/txt_printed_gifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView"/>

    <LinearLayout
            android:layout_marginTop="@dimen/size_50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

        <EditText

                android:textColorHint="@android:color/white"
                android:textColor="@android:color/black"
                android:background="@drawable/edit_text"
                android:id="@+id/edt_email"
                style="@style/AuthEditText"
                android:hint="@string/txt_mail"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

        <EditText
                android:inputType="text"
                android:id="@+id/edt_name"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/black"
                android:background="@drawable/edit_text"
                style="@style/AuthEditText"
                android:hint="@string/txt_fullname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />


        <EditText
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/black"
                android:background="@drawable/edit_text"
                style="@style/AuthEditText"
                android:hint="@string/txt_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

        <EditText
                android:id="@+id/edt_confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/black"
                android:background="@drawable/edit_text"
                style="@style/AuthEditText"
                android:hint="@string/txt_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

        <EditText
                android:inputType="text"
                android:id="@+id/edt_promo"
                android:layout_gravity="center"
                android:hint="@string/txt_promo_code"
                android:layout_width="@dimen/size_130dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/black"
                android:background="@drawable/edit_text"
                style="@style/AuthEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

    </LinearLayout>


    <LinearLayout
            android:layout_marginBottom="@dimen/size_20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout" android:layout_marginLeft="8dp">
        <Button
                style="@style/GuestButton"
                android:text="@string/txt_continue_guest"
                android:background="@drawable/button_white"
                android:id="@+id/btn_continue_guest"/>
        <Button
                style="@style/AuthButton"
                android:text="@string/txt_signup"
                android:background="@drawable/button_auth"
                android:id="@+id/btn_submit"/>

        <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:textSize="16sp"
                    android:textColor="@color/themBrown"
                    android:text="@string/txt_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="16sp"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_login"
                    android:layout_marginLeft="@dimen/size_10dp"/>
        </LinearLayout>

        <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="@dimen/size_120dp"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/img_facebook"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:layout_alignParentLeft="true"/>
            <ImageView
                    android:id="@+id/img_gmailauth"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_gmail"
                    android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <com.facebook.login.widget.LoginButton
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/btn_with_facebook"
                android:text=""
                android:layout_weight="1"
                android:layout_width="@dimen/size_200dp"
                android:layout_height="@dimen/size_20dp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>