<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ThemRed">

    <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80dp"
            android:id="@+id/relativeLayout">

        <TextView
                style="@style/AuthHeader"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pshop"/>
    </RelativeLayout>
    <TextView
            android:textColor="@android:color/white"
            android:text="@string/txt_printed_gifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView"/>


    <EditText
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/black"
            android:background="@drawable/edit_text"
            android:id="@+id/edt_email"
            style="@style/AuthEditText"
            android:hint="@string/txt_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/edt_login"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout"/>


    <Button
            style="@style/AuthButton"
            android:text="submit"
            android:background="@drawable/button_auth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btn_submit"
            app:layout_constraintBottom_toTopOf="@+id/edt_login"/>
    <TextView
            android:textSize="18sp"
            android:layout_margin="@dimen/size_5dp"
            android:textColor="@android:color/white"
            android:text="@string/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edt_login"
            app:layout_constraintBottom_toTopOf="@+id/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Space android:layout_width="match_parent"
           android:layout_height="@dimen/size_80dp"
           app:layout_constraintBottom_toBottomOf="parent"
           android:id="@+id/space"/>




</android.support.constraint.ConstraintLayout>